--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Slide 3 -->
         <div class="slide cursor-pointer h-full" data-id="3">
           <div class="flex flex-col h-full">
-            <h2 class="text-xl font-bold mb-2">Forest Adventures 2</h2>
+            <h2 class="text-xl font-bold mb-2">Forest Adventure</h2>
             <div class="flex-1 overflow-hidden rounded-lg">
               <img src="https://picsum.photos/id/15/600/150" alt="Forest" class="w-full h-full object-cover">
             </div>
